[ci skip] Updates

--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
 		<div class="col-8 col-content">
 			<div class="tsd-panel tsd-typography">
 				<h1 id="groupme-get-all-messages">groupme-get-all-messages</h1>
-				<p><a href="https://circleci.com/gh/johnslemmer/groupme-get-all-messages"><img src="https://circleci.com/gh/johnslemmer/groupme-get-all-messages.svg?style=svg" alt="CircleCI"></a></p>
+				<p><a href="https://www.npmjs.com/package/groupme-get-all-messages"><img src="https://img.shields.io/npm/v/groupme-get-all-messages.svg" alt="NPM version"></a>
+					<a href="https://codecov.io/gh/johnslemmer/groupme-get-all-messages"><img src="https://img.shields.io/codecov/c/github/johnslemmer/groupme-get-all-messages.svg" alt="Codecov"></a>
+				<a href="https://circleci.com/gh/johnslemmer/groupme-get-all-messages"><img src="https://img.shields.io/circleci/project/github/johnslemmer/groupme-get-all-messages.svg" alt="CircleCI"></a></p>
 				<p>Simply grab all of the messages from a specific GroupMe group and output it
 				as JSON.</p>
 				<h2 id="requirements">Requirements</h2>
