--- a/globals.html
+++ b/globals.html
@@ -67,33 +67,51 @@
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
-						<section class="tsd-index-section tsd-is-not-exported">
+						<section class="tsd-index-section ">
 							<h3>Interfaces</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-interface tsd-is-not-exported"><a href="interfaces/group.html" class="tsd-kind-icon">Group</a></li>
-								<li class="tsd-kind-interface tsd-is-not-exported"><a href="interfaces/message.html" class="tsd-kind-icon">Message</a></li>
+								<li class="tsd-kind-interface"><a href="interfaces/group.html" class="tsd-kind-icon">Group</a></li>
+								<li class="tsd-kind-interface"><a href="interfaces/message.html" class="tsd-kind-icon">Message</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section tsd-is-not-exported">
+							<h3>Variables</h3>
+							<ul class="tsd-index-list">
+								<li class="tsd-kind-variable tsd-is-not-exported"><a href="globals.html#help" class="tsd-kind-icon">HELP</a></li>
+							</ul>
+						</section>
+						<section class="tsd-index-section ">
 							<h3>Functions</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-function tsd-is-not-exported"><a href="globals.html#filtervalues" class="tsd-kind-icon">filter<wbr>Values</a></li>
 								<li class="tsd-kind-function tsd-is-not-exported"><a href="globals.html#getaccesstoken" class="tsd-kind-icon">get<wbr>Access<wbr>Token</a></li>
-								<li class="tsd-kind-function tsd-is-not-exported"><a href="globals.html#getallmessages" class="tsd-kind-icon">get<wbr>All<wbr>Messages</a></li>
+								<li class="tsd-kind-function"><a href="globals.html#getallmessages" class="tsd-kind-icon">get<wbr>All<wbr>Messages</a></li>
 								<li class="tsd-kind-function tsd-is-not-exported"><a href="globals.html#getgroupid" class="tsd-kind-icon">get<wbr>Group<wbr>Id</a></li>
-								<li class="tsd-kind-function tsd-is-not-exported"><a href="globals.html#getgroups" class="tsd-kind-icon">get<wbr>Groups</a></li>
+								<li class="tsd-kind-function"><a href="globals.html#getgroups" class="tsd-kind-icon">get<wbr>Groups</a></li>
 								<li class="tsd-kind-function tsd-is-not-exported"><a href="globals.html#getmessagesraw" class="tsd-kind-icon">get<wbr>Messages<wbr>Raw</a></li>
 								<li class="tsd-kind-function tsd-is-not-exported"><a href="globals.html#handlehelp" class="tsd-kind-icon">handle<wbr>Help</a></li>
 								<li class="tsd-kind-function tsd-is-not-exported"><a href="globals.html#handleversion" class="tsd-kind-icon">handle<wbr>Version</a></li>
 								<li class="tsd-kind-function tsd-is-not-exported"><a href="globals.html#inquireaccesstoken" class="tsd-kind-icon">inquire<wbr>Access<wbr>Token</a></li>
 								<li class="tsd-kind-function tsd-is-not-exported"><a href="globals.html#inquiregroup" class="tsd-kind-icon">inquire<wbr>Group</a></li>
-								<li class="tsd-kind-function tsd-is-not-exported"><a href="globals.html#printhelp" class="tsd-kind-icon">print<wbr>Help</a></li>
 							</ul>
 						</section>
 					</div>
 				</section>
 			</section>
 			<section class="tsd-panel-group tsd-member-group tsd-is-not-exported">
+				<h2>Variables</h2>
+				<section class="tsd-panel tsd-member tsd-kind-variable tsd-is-not-exported">
+					<a name="help" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagConst">Const</span> HELP</h3>
+					<div class="tsd-signature tsd-kind-icon">HELP<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;&#x60;Usage: ${path.basename(process.argv[1],)} [-h|--help] [-v|--version] [&lt;GroupMe Access Token&gt; [&lt;Group ID&gt;]]&#x60;</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/johnslemmer/groupme-get-all-messages/blob/96d6ad3/src/cli/index.ts#L7">cli/index.ts:7</a></li>
+						</ul>
+					</aside>
+				</section>
+			</section>
+			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Functions</h2>
 				<section class="tsd-panel tsd-member tsd-kind-function tsd-is-not-exported">
 					<a name="filtervalues" class="tsd-anchor"></a>
@@ -105,7 +123,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/johnslemmer/groupme-get-all-messages/blob/89e6474/src/index.ts#L136">index.ts:136</a></li>
+									<li>Defined in <a href="https://github.com/johnslemmer/groupme-get-all-messages/blob/96d6ad3/src/index.ts#L56">index.ts:56</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -128,24 +146,24 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/johnslemmer/groupme-get-all-messages/blob/89e6474/src/index.ts#L55">index.ts:55</a></li>
+									<li>Defined in <a href="https://github.com/johnslemmer/groupme-get-all-messages/blob/96d6ad3/src/cli/index.ts#L50">cli/index.ts:50</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">&gt;</span></h4>
 						</li>
 					</ul>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-function tsd-is-not-exported">
+				<section class="tsd-panel tsd-member tsd-kind-function">
 					<a name="getallmessages" class="tsd-anchor"></a>
 					<h3>get<wbr>All<wbr>Messages</h3>
-					<ul class="tsd-signatures tsd-kind-function tsd-is-not-exported">
+					<ul class="tsd-signatures tsd-kind-function">
 						<li class="tsd-signature tsd-kind-icon">get<wbr>All<wbr>Messages<span class="tsd-signature-symbol">(</span>groupId<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, accessToken<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">ReadonlyArray</span><span class="tsd-signature-symbol">&lt;</span><a href="interfaces/message.html" class="tsd-signature-type">Message</a><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">&gt;</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/johnslemmer/groupme-get-all-messages/blob/89e6474/src/index.ts#L109">index.ts:109</a></li>
+									<li>Defined in <a href="https://github.com/johnslemmer/groupme-get-all-messages/blob/96d6ad3/src/index.ts#L29">index.ts:29</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -171,7 +189,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/johnslemmer/groupme-get-all-messages/blob/89e6474/src/index.ts#L76">index.ts:76</a></li>
+									<li>Defined in <a href="https://github.com/johnslemmer/groupme-get-all-messages/blob/96d6ad3/src/cli/index.ts#L71">cli/index.ts:71</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -184,17 +202,17 @@
 						</li>
 					</ul>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-function tsd-is-not-exported">
+				<section class="tsd-panel tsd-member tsd-kind-function">
 					<a name="getgroups" class="tsd-anchor"></a>
 					<h3>get<wbr>Groups</h3>
-					<ul class="tsd-signatures tsd-kind-function tsd-is-not-exported">
+					<ul class="tsd-signatures tsd-kind-function">
 						<li class="tsd-signature tsd-kind-icon">get<wbr>Groups<span class="tsd-signature-symbol">(</span>accessToken<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">ReadonlyArray</span><span class="tsd-signature-symbol">&lt;</span><a href="interfaces/group.html" class="tsd-signature-type">Group</a><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">&gt;</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/johnslemmer/groupme-get-all-messages/blob/89e6474/src/index.ts#L98">index.ts:98</a></li>
+									<li>Defined in <a href="https://github.com/johnslemmer/groupme-get-all-messages/blob/96d6ad3/src/index.ts#L16">index.ts:16</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -217,7 +235,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/johnslemmer/groupme-get-all-messages/blob/89e6474/src/index.ts#L147">index.ts:147</a></li>
+									<li>Defined in <a href="https://github.com/johnslemmer/groupme-get-all-messages/blob/96d6ad3/src/index.ts#L67">index.ts:67</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -249,7 +267,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/johnslemmer/groupme-get-all-messages/blob/89e6474/src/index.ts#L24">index.ts:24</a></li>
+									<li>Defined in <a href="https://github.com/johnslemmer/groupme-get-all-messages/blob/96d6ad3/src/cli/index.ts#L28">cli/index.ts:28</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -272,7 +290,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/johnslemmer/groupme-get-all-messages/blob/89e6474/src/index.ts#L47">index.ts:47</a></li>
+									<li>Defined in <a href="https://github.com/johnslemmer/groupme-get-all-messages/blob/96d6ad3/src/cli/index.ts#L42">cli/index.ts:42</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -295,7 +313,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/johnslemmer/groupme-get-all-messages/blob/89e6474/src/index.ts#L61">index.ts:61</a></li>
+									<li>Defined in <a href="https://github.com/johnslemmer/groupme-get-all-messages/blob/96d6ad3/src/cli/index.ts#L56">cli/index.ts:56</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -312,7 +330,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/johnslemmer/groupme-get-all-messages/blob/89e6474/src/index.ts#L82">index.ts:82</a></li>
+									<li>Defined in <a href="https://github.com/johnslemmer/groupme-get-all-messages/blob/96d6ad3/src/cli/index.ts#L77">cli/index.ts:77</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -322,23 +340,6 @@
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">&gt;</span></h4>
-						</li>
-					</ul>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-function tsd-is-not-exported">
-					<a name="printhelp" class="tsd-anchor"></a>
-					<h3>print<wbr>Help</h3>
-					<ul class="tsd-signatures tsd-kind-function tsd-is-not-exported">
-						<li class="tsd-signature tsd-kind-icon">print<wbr>Help<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
-					</ul>
-					<ul class="tsd-descriptions">
-						<li class="tsd-description">
-							<aside class="tsd-sources">
-								<ul>
-									<li>Defined in <a href="https://github.com/johnslemmer/groupme-get-all-messages/blob/89e6474/src/index.ts#L34">index.ts:34</a></li>
-								</ul>
-							</aside>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
 						</li>
 					</ul>
 				</section>
@@ -354,11 +355,14 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
-					<li class=" tsd-kind-interface tsd-is-not-exported">
+					<li class=" tsd-kind-interface">
 						<a href="interfaces/group.html" class="tsd-kind-icon">Group</a>
 					</li>
-					<li class=" tsd-kind-interface tsd-is-not-exported">
+					<li class=" tsd-kind-interface">
 						<a href="interfaces/message.html" class="tsd-kind-icon">Message</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-not-exported">
+						<a href="globals.html#help" class="tsd-kind-icon">HELP</a>
 					</li>
 					<li class=" tsd-kind-function tsd-is-not-exported">
 						<a href="globals.html#filtervalues" class="tsd-kind-icon">filter<wbr>Values</a>
@@ -366,13 +370,13 @@
 					<li class=" tsd-kind-function tsd-is-not-exported">
 						<a href="globals.html#getaccesstoken" class="tsd-kind-icon">get<wbr>Access<wbr>Token</a>
 					</li>
-					<li class=" tsd-kind-function tsd-is-not-exported">
+					<li class=" tsd-kind-function">
 						<a href="globals.html#getallmessages" class="tsd-kind-icon">get<wbr>All<wbr>Messages</a>
 					</li>
 					<li class=" tsd-kind-function tsd-is-not-exported">
 						<a href="globals.html#getgroupid" class="tsd-kind-icon">get<wbr>Group<wbr>Id</a>
 					</li>
-					<li class=" tsd-kind-function tsd-is-not-exported">
+					<li class=" tsd-kind-function">
 						<a href="globals.html#getgroups" class="tsd-kind-icon">get<wbr>Groups</a>
 					</li>
 					<li class=" tsd-kind-function tsd-is-not-exported">
@@ -389,9 +393,6 @@
 					</li>
 					<li class=" tsd-kind-function tsd-is-not-exported">
 						<a href="globals.html#inquiregroup" class="tsd-kind-icon">inquire<wbr>Group</a>
-					</li>
-					<li class=" tsd-kind-function tsd-is-not-exported">
-						<a href="globals.html#printhelp" class="tsd-kind-icon">print<wbr>Help</a>
 					</li>
 				</ul>
 			</nav>
